test/org/midica/testfiles/failing/eff-func-pbr-halftone-gt-max-1.midica
INCLUDE inc/instruments.midica


0: pitch_range.set(129.0)
